// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoogleAnalytics doesn't add anything if there's no tracking ids 1`] = `""`;

exports[`GoogleAnalytics works with a single tracking id 1`] = `
"<script data-rh=\\"true\\" async=\\"true\\" src=\\"https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXX-X\\"></script><script data-rh=\\"true\\" >
window.dataLayer = window.dataLayer || [];
window.gtag = function gtag(){dataLayer.push(arguments);}
gtag('js', new Date());

gtag('config', 'UA-XXXXXXX-X');
</script>"
`;

exports[`GoogleAnalytics works with multiple traking ids 1`] = `
"<script data-rh=\\"true\\" async=\\"true\\" src=\\"https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXX-X\\"></script><script data-rh=\\"true\\" >
window.dataLayer = window.dataLayer || [];
window.gtag = function gtag(){dataLayer.push(arguments);}
gtag('js', new Date());

gtag('config', 'UA-XXXXXXX-X');
gtag('config', 'UA-YYYYYYY-Y');
</script>"
`;
